--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
+    "@uiw/react-markdown-preview": "^5.1.5",
+    "@uiw/react-md-editor": "^4.0.11",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,8 +58,10 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^12.23.24",
+    "html-to-docx": "^1.8.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
+    "marked": "^17.0.1",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
     "openai": "^6.9.1",
