--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "allowImportingTsExtensions": true,
 
     "baseUrl": ".",
-    "types": ["node", "vite/client"],
+    "types": ["node"],
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"]
