--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
 
     "strict": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
