--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.25.76",
+    "multer": "^1.4.5",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
@@ -104,6 +105,7 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/ws": "^8.5.13",
+    "@types/multer": "^1.4.9",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.4",
