--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.25.76",
-    "multer": "^1.4.5",
+    "multer": "^1.4.5-lts.1",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
