feat(training): add admin delete for training videos feat(training): add admin edit for training videos feat(training): add vimeo support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "allowImportingTsExtensions": true,
 
     "baseUrl": ".",
+    "typeRoots": ["./types", "./node_modules/@types"],
     "types": ["node", "vite/client"],
     "paths": {
       "@/*": ["./client/src/*"],
