--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "lucide-react": "^0.545.0",
     "marked": "^17.0.1",
     "memorystore": "^1.6.7",
+    "multer": "^1.4.5-lts.1",
     "next-themes": "^0.4.6",
     "openai": "^6.9.1",
     "passport": "^0.7.0",
@@ -88,7 +89,6 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.25.76",
-    "multer": "^1.4.5-lts.1",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
@@ -97,15 +97,15 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/vite": "^4.1.14",
     "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.19.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
-    "@types/ws": "^8.5.13",
-    "@types/multer": "^1.4.9",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.4",
