feat: extend planner prefs and admin UI

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node --import=tsx ./script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
+    "test:planning-solver": "tsx server/tests/planningSolver.test.ts",
     "db:push": "npx drizzle-kit push",
     "format": "prettier --write \"server/**/*.ts\" \"client/**/*.{ts,tsx}\" \"shared/**/*.ts\" \"script/**/*.ts\"",
     "format:check": "prettier --check \"server/**/*.ts\" \"client/**/*.{ts,tsx}\" \"shared/**/*.ts\" \"script/**/*.ts\""
